# LLM-engineering

./: CMakeLists.txt
src/kernels/: build_casual_mask.cu  cal_paddingoffset.cu  cal_paddingoffset.h  flashattention.cu  input_embedding.cu  linear.cu  qkv_bias_and_RoPE.cu  rmsnorm_kernel.cu
src/layers/attention/: context_attention.cpp  context_attention.h
src/memory/allocator/: cuda_allocator.h
src/models/llama/: llama.h
src/utils/: tensor.h  vectorize_utils.h
src/weights/: base_weights.h
src/weights/llama/: embedding_weights.h  layer_weights.h
tests/unittests/: CMakeLists.txt  test_input_embedding.cu
